# ESP32_HardwareMonitor

./: .gitignore  BuildExec.bat  LHMToSerial.py  LICENSE  README.md  README_es.md  config.json  config_ui.py  settings_manager.py
Arduino Files/ESP32/: ESP32.ino  lvgl_setup.cpp  lvgl_setup.h  ui_clock.cpp  ui_clock.h  ui_update.cpp
Arduino Files/libraries/ui/src/: CMakeLists.txt  ui.c  ui_themes.h
Arduino Files/libraries/ui/src/fonts/: ui_font_Test16.c  ui_font_Test18.c
Arduino Files/libraries/ui/src/screens/: ui_Screen1.c  ui_Screen1.h
LHM/: LibreHardwareMonitor.config
Licenses/: ARDUINO_CORE_LICENSE.txt  LHM_LICENSE.txt  LVGL_LICENSE.txt
Software/: BuildExec.bat  BuildInstaller.bat  InstallerScript.iss  LHMToSerial.py  config_ui.py
SquareLine Files/HWM/: HWM.sll  HWM.slp  HWM.spj  Themes.slt  project.info
SquareLine Files/HWM/assets/: ui_font_Clock.c  ui_font_Clock.fcfg  ui_font_Font16_2.c  ui_font_Font16_2.fcfg  ui_font_Test.c  ui_font_Test.fcfg  ui_font_Test16.fcfg  ui_font_Test18.fcfg
libraries/ui/src/: filelist.txt  project.info  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c
libraries/ui/src/components/: ui_comp_hook.c
libraries/ui/src/images/: ui_img_126065372.c
ui/: ui_update.cpp  ui_update.h
